src/objects/Tracker__c.object
<CustomObject>
    <description>Track all R&amp;D progress</description>
    <fields>
        <fullName>Category__c</fullName>
        <label>Category</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>APEX</fullName>
                </value>
                <value>
                    <fullName>AWS</fullName>
                </value>
                <value>
                    <fullName>Git</fullName>
                </value>
                <value>
                    <fullName>Heroku</fullName>
                </value>
                <value>
                    <fullName>Integration</fullName>
                </value>
                <value>
                    <fullName>Javacript</fullName>
                </value>
                <value>
                    <fullName>jQuery</fullName>
                </value>
                <value>
                    <fullName>Lightning</fullName>
                </value>
                <value>
                    <fullName>Migration</fullName>
                </value>
                <value>
                    <fullName>VisualForce</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Components__c</fullName>
        <description>This field holds all the metadata components that are used for this specific category or topic</description>
        <label>Components</label>
        <length>129000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Links__c</fullName>
        <description>This field stores all the links that are used or visited as part of research and testing</description>
        <label>Links</label>
        <length>129000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>References__c</fullName>
        <description>This field is to hold all the resources used - books, pdfs(stored in sfdc as DOCs), and any other material that was useful/helpful</description>
        <label>References</label>
        <length>129000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>This field tracks the current status of the topic in context</description>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>To Start</fullName>
                </value>
                <value>
                    <fullName>Researching</fullName>
                </value>
                <value>
                    <fullName>DEV In progress</fullName>
                </value>
                <value>
                    <fullName>DEV Completed</fullName>
                </value>
                <value>
                    <fullName>Testing in Progress</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Migrated to Backup Org</fullName>
                </value>
                <value>
                    <fullName>Uploaded to Repo</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Tags__c</fullName>
        <description>Populate this field with all the tags related to this category or any other category that is not mentioned</description>
        <label>Tags</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Tools__c</fullName>
        <description>This field contains a list of useful tools required for this category or for its its research and testing</description>
        <label>Tools</label>
        <length>129000</length>
        <type>Html</type>
    </fields>
    <label>Tracker</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Tracker Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Tracker</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>